--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="/html/ex4.html">Exercise 4</a>
         <br>
         <br>
-        
+        <a href="/html/ex5.html">Exercise 5</a>
     </ul>
 </body>
 
